jump animation issues fixed

--- a/src/app/sections/research/research-detail/research-detail.component.scss
+++ b/src/app/sections/research/research-detail/research-detail.component.scss
@@ -26,8 +26,10 @@
   margin-bottom: 40px;
   transition: $transition;
 
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.8;
+    outline: none;
   }
 
   .back-arrow {
